# nn-entropy

./: .gitignore  2-methyl-hexane_unrestrained_convergence.csv  Cargo.toml  README.md  assess_convergence.sh  nn-entropy.code-workspace  steve_unrestrained_convergence.csv
src/: extrapolation.rs  joint_nn.rs  lib.rs  main.rs  main_backup.rs  pyo3_api.rs
src/bat_library/: mod.rs
tests/: entropy.rs  testing.rs
tests/fixtures/: sample.prod.out  test.nc  test.parm7
