[package]
name = "nn_entropy"
version = "0.1.0"
edition = "2024"

[lib]
name = "nn_entropy"
crate-type = ["cdylib"]

[dependencies]
rstest = "0.25"
assert_approx_eq = "1.1.0"
rand = "0.8"
rand_distr = "0.4"  # add this line
kiddo = "5.0.3"
csv = "1.3"
rayon = "1.5" # for parallelism
ndarray = "0.16.1"
libm = "0.2.11"
numpy = "0.21"
pyo3 = { version = "0.21", features = ["extension-module"] }